bug- content select input covered up when the name is lengthy

--- a/blynq/static/CustomStylings/CustomFile.css
+++ b/blynq/static/CustomStylings/CustomFile.css
@@ -84,6 +84,7 @@ position : relative;
 height: 25px;
 padding: 3px;
 overflow : hidden;
+position : relative;
 }
 
 .item-container > img, .folder-container > img{
@@ -245,6 +246,12 @@ min-width : 200px;
 
 .pointer{
 cursor:pointer
+}
+
+.right-absolute{
+    position : absolute;
+    top : 3px;
+    right : 3px;
 }
 
 .fill{
